Closed Bug 883383 Opened 11 years ago Closed 11 years ago

Fix more static rooting analysis failures in SpiderMonkey

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla24

People

(Reporter: terrence, Assigned: terrence)

References

Details

Attachments

(1 file)

Attached patch v0Splinter Review
This should be the last with the exception of one false positive with the exception of the unsafe-address-of hazards.
Attachment #762921 - Flags: review?(sphink)
Comment on attachment 762921 [details] [diff] [review] v0 Review of attachment 762921 [details] [diff] [review]: ----------------------------------------------------------------- ::: js/src/builtin/TestingFunctions.cpp @@ +913,5 @@ > { > Value thisv = UndefinedValue(); > > + RootedValue rval(cx); > + if (!Invoke(cx, thisv, ObjectValue(*objectMetadataFunction), 0, NULL, rval.address())) { I'll let you get away with this for now :) but it's about time for Invoke to take a MutableHandleValue. There are 45 callers that pass .address() right now, and less than a dozen that take something else.
Attachment #762921 - Flags: review?(sphink) → review+
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla24
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: