Bug 883383 - Fix some more static root analysis failures in SpiderMonkey; r=sfink